# factorization_machine

./: Cargo.toml  README.md
src/: dataset.rs  lib.rs  loss.rs  main.rs  model.rs  optimizer.rs
